Update display name for NuGet push task in deploy-plugin-package.yml

--- a/deploy-plugin-package.yml
+++ b/deploy-plugin-package.yml
@@ -26,7 +26,7 @@ jobs:
 
 
           - task: NuGetCommand@2
-            displayName: 'MyGet push'
+            displayName: 'Nuget push'
             inputs:
                 command: push
                 packagesToPush: '$(System.ArtifactsDirectory)/NuGetArtifacts/${{ parameters.packageArtifactName }}/*.nupkg'
