Add checkoutSteps parameter to build.yml for enhanced flexibility in signing process

--- a/build.yml
+++ b/build.yml
@@ -52,6 +52,9 @@ parameters:
 - name: isReleaseBuildExpression
   type: string
   default: startswith(variables['Build.SourceBranch'], 'refs/tags/v') # if evaluated to true, the build will be retained for the provided duration
+- name: checkoutSteps 
+  type: stepList 
+  default: [] 
 
 jobs:
 - job: Build
@@ -193,6 +196,7 @@ jobs:
 
   - template: strongNameSigning.yml
     parameters:
+      checkoutSteps: ${{ parameters.checkoutSteps }}
       signingKeyFileName: 'FhirMetrics.snk'
       filesForSigning: '$(Build.SourcesDirectory)\src\Fhir.Metrics\bin\Release\*\Fhir.Metrics.dll'
 
