--- a/build.yml
+++ b/build.yml
@@ -64,8 +64,8 @@ jobs:
     inputs:
       version: ${{ parameters.dotNetCoreVersion }}
 
-  - ${{ if eq(parameters.checkoutSubmodules, 'true') }}:
-    - checkout: self
+  - checkout: self
+    ${{ if eq(parameters.checkoutSubmodules, 'true') }}:
       submodules: true
 
   ## retrieve the version suffix from the props file and set it as a variable
