Refactor build.yml to simplify restore dependencies logic and improve build conditions

--- a/build.yml
+++ b/build.yml
@@ -16,6 +16,7 @@ parameters:
 - name: restoreDependencies
   type: boolean
   default: false # if true, dependencies will be restored before building
+  displayName: 'Restore dependencies [deprecated]'
 - name: nuGetServiceConnections
   type: string
   default: '' # Service connection credentials for feeds outside this organization. 
@@ -119,27 +120,18 @@ jobs:
       Write-Host "##vso[task.setvariable variable=UseVersionSuffix]$useVersionSuffix"
     displayName: 'Determine version suffix use'
 
-  - ${{ if eq(parameters.restoreDependencies, 'true') }}:
-    - template: restore.yml
-      parameters:
-        nuGetServiceConnections: ${{ parameters.nuGetServiceConnections }}
-        nuGetSources: ${{ parameters.nuGetSources }}
+  - template: restore.yml
+    parameters:
+      nuGetServiceConnections: ${{ parameters.nuGetServiceConnections }}
+      nuGetSources: ${{ parameters.nuGetSources }}
       
   - script: dotnet build --configuration $(buildConfiguration) --no-restore
-    displayName: 'dotnet build $(buildConfiguration) with no restore'
-    condition: and(succeeded(), and(eq('${{ parameters.restoreDependencies }}', 'true'), eq(variables.UseVersionSuffix, 'false')))
-
-  - script: dotnet build --configuration $(buildConfiguration) 
     displayName: 'dotnet build $(buildConfiguration)'
-    condition: and(succeeded(), and(eq('${{ parameters.restoreDependencies }}', 'false'), eq(variables.UseVersionSuffix, 'false')))
+    condition: and(succeeded(), eq(variables.UseVersionSuffix, 'false'))
 
   - script: dotnet build --configuration $(buildConfiguration) --version-suffix $(VersionSuffix) --no-restore
-    displayName: 'dotnet build $(buildConfiguration) with version suffix and with no restore'
-    condition: and(succeeded(), and(eq('${{ parameters.restoreDependencies }}', 'true'), eq(variables.UseVersionSuffix, 'true')))
-
-  - script: dotnet build --configuration $(buildConfiguration) --version-suffix $(VersionSuffix)
     displayName: 'dotnet build $(buildConfiguration) with version suffix'
-    condition: and(succeeded(), and(eq('${{ parameters.restoreDependencies }}', 'false'), eq(variables.UseVersionSuffix, 'true')))
+    condition: and(succeeded(), eq(variables.UseVersionSuffix, 'true'))
 
   - task: PowerShell@2
     name: OutputVersion
