Add additional debug information to build.yml for enhanced repository visibility

--- a/build.yml
+++ b/build.yml
@@ -71,9 +71,13 @@ jobs:
   - powershell: |
       Write-Host "Build.SourceDirectory: $(Build.SourcesDirectory)"
       Write-Host "Pipeline.Workspace: $(Pipeline.Workspace)"
+      Write-Host "Build.Repository.Name: $(Build.Repository.Name)"
+      Write-Host "Build.Repository.LocalPath: $(Build.Repository.LocalPath)"
+
       # Directory listing:
       Write-Host "Directory listing:"
       Get-ChildItem -Path $(Pipeline.Workspace) -Recurse
+
     displayName: 'Debug info'
 
   ## retrieve the version suffix from the props file and set it as a variable
