--- a/strongNameSigning.yml
+++ b/strongNameSigning.yml
@@ -36,7 +36,7 @@ steps:
         Write-Verbose "Last exitcode before signing: $lastexitcode"
         foreach ($file in ($files))
         {
-          Write-Verbose "Signing file: $file"
+          Write-Host "Signing file: $file"
 
           & '$(signingTool.secureFilePath)' -R $file $(signingKey.secureFilePath)
           Write-Verbose "Last exitcode after signing file: $lastexitcode"
@@ -46,5 +46,4 @@ steps:
         if ($lastexitcode -lt 2) { $global:lastexitcode = 0 }
     displayName: Signing the dlls
     name: signing
-    condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest')) # not a PR
   
