--- a/strongNameSigning.yml
+++ b/strongNameSigning.yml
@@ -47,7 +47,7 @@ steps:
           if ($lastexitcode -lt 2) { $global:lastexitcode = 0 }
       displayName: Signing the dlls
       name: signingDlls
-  - {{ else }}:
+  - ${{ else }}:
     - powershell: |
         Write-Host "No signing key file provided, skipping signing"
       displayName: 'No signing key file provided'
