Remove Azure Key Vault in the comments
Co-authored-by: Louis Latour <louis@fire.ly>

--- a/codesign-nuget-packages.yml
+++ b/codesign-nuget-packages.yml
@@ -15,7 +15,7 @@
 parameters:
 - name: certificateValue
   type: string
-  displayName: 'The certificate value from the Azure Key Vault'
+  displayName: 'The certificate value'
   default: ''
 - name: certificatePasswordValue
   type: string
