--- a/build.yml
+++ b/build.yml
@@ -44,6 +44,10 @@ parameters:
 - name: pool
   type: object
   default: {} # pool to use for the build
+- name: testProjects
+  type: string
+  default: '**/*Tests/*Tests.csproj'
+  displayName: 'Test projects to run'
 - name: testFilter
   type: string
   default: '' # filter for unit tests; all tests by default
@@ -77,6 +81,14 @@ parameters:
   type: string
   default: ''
   displayName: 'Password for the code signing certificate'
+- name: buildSolutionFile
+  type: string
+  default: ''
+  displayName: 'Solution file to build. If empty, the default solution file in the working directory will be used'
+- name: packageSolutionFile
+  type: string
+  default: ''
+  displayName: 'Solution file to package. If empty, the default solution file in the working directory will be used'
 
 jobs:
 - job: Build
@@ -151,11 +163,11 @@ jobs:
       nuGetServiceConnections: ${{ parameters.nuGetServiceConnections }}
       nuGetSources: ${{ parameters.nuGetSources }}
       
-  - script: dotnet build --configuration $(buildConfiguration) --no-restore
+  - script: dotnet build ${{ parameters.buildSolutionFile }} --configuration $(buildConfiguration) --no-restore /p:ContinuousIntegrationBuild=true
     displayName: 'dotnet build $(buildConfiguration)'
     condition: and(succeeded(), eq(variables.UseVersionSuffix, 'false'))
 
-  - script: dotnet build --configuration $(buildConfiguration) --version-suffix $(VersionSuffix) --no-restore
+  - script: dotnet build ${{ parameters.buildSolutionFile }} --configuration $(buildConfiguration) --version-suffix $(VersionSuffix) --no-restore /p:ContinuousIntegrationBuild=true
     displayName: 'dotnet build $(buildConfiguration) with version suffix'
     condition: and(succeeded(), eq(variables.UseVersionSuffix, 'true'))
 
@@ -200,7 +212,7 @@ jobs:
     condition: and(succeeded(), ne('${{ parameters.testFilter }}', ''))
     inputs:
       command: test
-      projects: '**/*Tests/*Tests.csproj'
+      projects: ${{ parameters.testProjects }}
       arguments: '--configuration $(buildConfiguration) --no-restore --filter ${{ parameters.testFilter }}'
 
   - task: DotNetCoreCLI@2
@@ -208,7 +220,7 @@ jobs:
     condition: and(succeeded(), eq('${{ parameters.testFilter }}', ''))
     inputs:
       command: test
-      projects: '**/*Tests/*Tests.csproj'
+      projects: ${{ parameters.testProjects }}
       arguments: '--configuration $(buildConfiguration) --no-restore'
 
   - template: strongNameSigning.yml
@@ -226,6 +238,7 @@ jobs:
         versionSuffix: $(VersionSuffix)
         codeSignerCertificate: ${{ parameters.codeSignerCertificate }}
         codeSignerPassword: ${{ parameters.codeSignerPassword }}
+        packageSolutionFile: ${{ parameters.packageSolutionFile }}
   
   - ${{ if parameters.publishArtifacts }}:
     - template: publish.yml
