Fix submodules parameter syntax in build.yml for proper evaluation

--- a/build.yml
+++ b/build.yml
@@ -104,7 +104,7 @@ jobs:
       displayName: 'Enable long paths for git'
 
   - checkout: self
-    submodules: '{{ parameters.checkoutSubmodules }}'
+    submodules: ${{ parameters.checkoutSubmodules }}
 
   ## retrieve the version suffix from the props file and set it as a variable
   - powershell: |
