Fix case sensitivity for addLatestTag parameter in buildAndPushDockerImage.yml

--- a/buildAndPushDockerImage.yml
+++ b/buildAndPushDockerImage.yml
@@ -54,11 +54,10 @@ jobs:
       containerRegistry: ${{ parameters.containerRegistry }}
       command: "login"
   - bash: |
-      echo "parameter addLatestTag is ${{ parameters.addLatestTag }}"
       docker run --privileged --rm tonistiigi/binfmt --install arm64
       docker run --privileged --rm tonistiigi/binfmt
       docker buildx create --use
-      if [ "${{ parameters.addLatestTag }}" = "true" ]; then 
+      if [ "${{ parameters.addLatestTag }}" = "True" ]; then 
         docker buildx build --platform linux/amd64,linux/arm64 \
           --build-arg=PUBLISHED_CODE=azuredevops \
           --tag ${{ parameters.dockerRegistry }}/${{ parameters.imageRepositoryName }}:$(Build.BuildNumber) \
